[tool.poetry]
name = "Perplexity-Clone-LangGraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.23.2"
langserve = "0.2.2"
pydantic = "2.8.2"
beautifulsoup4 = "4.12.3"
fastapi = "0.112.1"
html2text = "2024.2.26"
duckduckgo-search = "6.2.9"
langchain = "0.2.14"
langchain-anthropic = "0.1.23"
langchain-community = "0.2.12"
langchain-core = "0.2.33"
langchain-experimental = "0.0.64"
langchain-mistralai = "0.1.12"
langchain-openai = "0.1.22"
langchain-text-splitters = "0.2.2"
langchainhub = "0.1.21"
langgraph = "0.2.4"
langgraph-checkpoint = "1.0.3"
langgraph-checkpoint-postgres = "1.0.3"
openai = "1.41.1"
python-multipart = "0.0.9"
psycopg-binary = "3.2.1"
psycopg-pool = "3.2.2"
psycopg2-binary = "*"

[tool.poetry.group.dev.dependencies]
langchain-cli = "0.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"