[tool.poetry]
name = "Perplexity-Clone-LangGraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.23.2"
langserve = "^0.3.0"
pydantic = "2.8.2"
beautifulsoup4 = "4.12.3"
fastapi = "0.112.1"
html2text = "2024.2.26"
duckduckgo-search = "6.2.9"
langchain = "^0.3.1"
langchain-anthropic = "^0.2.1"
langchain-community = "^0.3.1"
langchain-core = "^0.3.6"
langchain-experimental = "^0.0.64"
langchain-mistralai = "^0.2.0"
langchain-openai = "^0.2.1"
langchain-text-splitters = "^0.3.0"
langchainhub = "^0.1.21"
langgraph = "^0.2.28"
langgraph-checkpoint = "^1.0.11"
langgraph-checkpoint-postgres = "^1.0.8"
openai = "^1.48.0"
python-multipart = "^0.0.9"
psycopg-binary = "3.2.1"
psycopg-pool = "3.2.2"
psycopg2-binary = "*"
python-dotenv = "1.0.1"
websockets = "13.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = "0.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"